--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@livekit/components-core",
-  "version": "0.6.11",
+  "version": "0.6.14",
   "license": "Apache-2.0",
   "author": "LiveKit",
   "repository": {
@@ -29,7 +29,9 @@
     "lint": "eslint -f unix \"src/**/*.{ts,tsx}\"",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "size": "size-limit"
+    "size": "size-limit",
+    "api-check": "echo \"🚧 api-checks for core are disabled!\" #TODO cleanup core api then activate api checks. api-extractor run --typescript-compiler-folder ../../node_modules/typescript",
+    "api-extractor": "api-extractor run --local --typescript-compiler-folder ../../node_modules/typescript --verbose"
   },
   "typings": "dist/index.d.ts",
   "dependencies": {
@@ -43,13 +45,14 @@
     "livekit-client": "^1.12.0"
   },
   "devDependencies": {
-    "@livekit/components-styles": "~1.0.4",
+    "@livekit/components-styles": "~1.0.6",
+    "@microsoft/api-extractor": "^7.36.0",
     "@size-limit/file": "^8.2.4",
     "@size-limit/webpack": "^8.2.4",
     "size-limit": "^8.2.4",
     "tsup": "^7.0.0",
-    "typescript": "5.0.4",
-    "vitest": "^0.32.0"
+    "typescript": "5.1.6",
+    "vitest": "^0.34.0"
   },
   "engines": {
     "node": ">=14"
