--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@livekit/components-core",
-  "version": "0.6.9",
+  "version": "0.7.0",
   "license": "Apache-2.0",
   "author": "LiveKit",
   "repository": {
@@ -29,27 +29,30 @@
     "lint": "eslint -f unix \"src/**/*.{ts,tsx}\"",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "size": "size-limit"
+    "size": "size-limit",
+    "api-check": "echo \"🚧 api-checks for core are disabled!\" #TODO cleanup core api then activate api checks. api-extractor run --typescript-compiler-folder ../../node_modules/typescript",
+    "api-extractor": "api-extractor run --local --typescript-compiler-folder ../../node_modules/typescript --verbose"
   },
   "typings": "dist/index.d.ts",
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
     "email-regex": "^5.0.0",
-    "global-tld-list": "^0.0.1125",
+    "global-tld-list": "^0.0.1139",
     "loglevel": "^1.8.1",
     "rxjs": "^7.8.0"
   },
   "peerDependencies": {
-    "livekit-client": "^1.11.2"
+    "livekit-client": "^1.12.0"
   },
   "devDependencies": {
-    "@livekit/components-styles": "~1.0.2",
+    "@livekit/components-styles": "~1.0.6",
+    "@microsoft/api-extractor": "^7.36.0",
     "@size-limit/file": "^8.2.4",
     "@size-limit/webpack": "^8.2.4",
     "size-limit": "^8.2.4",
-    "tsup": "^6.7.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.31.0"
+    "tsup": "^7.0.0",
+    "typescript": "5.2.2",
+    "vitest": "^0.34.0"
   },
   "engines": {
     "node": ">=14"
